--- a/my-app/angular.json
+++ b/my-app/angular.json
@@ -27,7 +27,9 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ol/ol.css",
               "src/styles.css"
+              
             ],
             "scripts": []
           },
@@ -94,8 +96,11 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ol/ol.css",
               "src/styles.css"
-            ],
+               
+              ],
+            
             "scripts": []
           }
         }
