--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@types/ol": "^6.5.3",
+    "@types/proj4": "^2.5.2",
+    "ol": "^6.14.1",
+    "proj4": "^2.8.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
